--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Portafolio-Alessia Castillo</title>
+    <title>Portafolio Alessia Castillo</title>
 </head>
 <body>
 <h1>Hello World</h1>
