--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--Tipo de archivo-->
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Portafolio Alessia Castillo</title>
+    <title>Portafolio Alessia Castillo</title><!--titulo de la ventana-->
+    <style>
+header{
+            background-color:#E0E0E0;
+            color:black;
+            text-align: center;
+            padding: 10px;
+}
+ nav{
+            line-height: 30px;
+            background-color:aqua;
+            height: 300px;
+            width: 100px;
+            float: left;
+            padding: 5px;
+}
+section{
+    width: 350px;
+    float: left;
+    padding: 10px;
+}
+footer{
+    background-color:blueviolet;
+    color: white;
+    clear: both;
+    text-align: center;
+    padding: 5px;
+}
+        </style>
 </head>
 <body>
 <h1>Hellow World</h1>
