--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html><!--Tipo de archivo-->
-<html>
+<html lang="es">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Portafolio Alessia Castillo</title><!--titulo de la ventana-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
-header{
-            background-color:#E0E0E0;
-            color:black;
-            text-align: center;
-            padding: 10px;
+/*CSS*/
+header {
+            background-color:#212121;
+            color:antiquewhite;
+            text-align: left;
+            font-size: 35px;
+            font-style:normal;
+            padding: 50px;
 }
- nav{
+body {
+    margin: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color:whitesmoke;
+}
+
+ nav {
             line-height: 30px;
             background-color:aqua;
             height: 300px;
@@ -19,22 +29,34 @@ header{
             float: left;
             padding: 5px;
 }
-section{
+section {
     width: 350px;
     float: left;
     padding: 10px;
 }
-footer{
+footer {
     background-color:blueviolet;
     color: white;
     clear: both;
     text-align: center;
     padding: 5px;
 }
+
+/*Menu desplegable*/
+
         </style>
 </head>
 <body>
+    <header>Alessia C</header>
+    <section>
+
+    </section>
 <h1>Hellow World</h1>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <p>I'm hosted with GitHub Pages.</p>
+<!--Menu desplegable-->
+
+
+<footer> Alessia C</footer>
 </body>
 </html>
