--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    
+<link href="index.css" rel="stylesheet">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -70,7 +70,7 @@
     <!--Sustom Style-->
     <link href="index.css" rel="stylesheet">
   </head>
-  <body>
+  <body id="pageTop">
     <!--Menu desplegable-->
 <main>
   <nav class="navbar navbar-dark bg-dark" aria-label="NavBar1">
@@ -79,11 +79,13 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarsExample01">
         <ul class="navbar-nav me-auto mb-2">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Sobre Mi</a>
+            <a class="nav-link active" aria-current="page" href="#sobremi">Sobre Mi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Hoobies</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="#">Habilidades</a>
@@ -98,8 +100,57 @@
       </div>
     </div>
   </nav>
-
 </main>
+
+
+<!-- Masthead-->
+<header class="masthead">
+  <div class="container h-100">
+      <div class="row h-100 align-items-center justify-content-center text-center">
+          <div class="col-lg-10 align-self-end">
+              <h1 class="text-uppercase text-white font-weight-bold"><span style="font-family: 'Lucida Sans'; font-size:20;">Alessia Castillo </span></h1>
+              <hr class="divider my-4" />  
+          </div>
+          <div class="col-lg-8 align-self-baseline">
+              <p class="text-white-75 font-weight-light mb-5">Lic.Ingenieria en Sistemas y computación</p>
+              <a class="btn btn-primary btn-xl js-scroll-trigger" href="#sobremi">Sobre mi</a>
+          </div>
+      </div>
+  </div>
+</header>
+
+
+<!--SOBRE MI-->
+<section class="page-section py-5 text-center container" id="sobremi">
+  <div class="row py-lg-5">
+    <div class="col-lg-6 col-md-8 mx-auto">
+      <h1 class="fw-light">Sobre mi</h1>
+      <p class="lead ">Me considero una persona puntual, organizada, autodidacta, creativa, con ansias de aprender y de autosuperación. Con capacidad de adaptabilidad a diversos ambientes con la finalidad de poder trabajar en equipo y dar lo mejor de mí en los proyectos para así poder desarrollarme profesionalmente.</p>
+      <p>
+        <a href="#" class="btn">Hobbies</a>
+        <a href="#" class="btn">Habilidades</a>
+      </p>
+    </div>
+  </div>
+</section>
+
+<!--HOBBIES-->
+
+
+
+<!--HABILIDADES-->
+
+
+
+<!--PORTAFOLIO-->
+
+
+
+<!--CONTACTO-->
+
+
+
+
 
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
