--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <main>
   <nav class="navbar navbar-dark bg-dark" aria-label="NavBar1">
     <div class="container-fluid">
-      <a class="navbar-brand ">Alessia Castillo</a>
+      <a class="navbar-brand ">Alessia C</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
