--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a class="nav-link active" aria-current="page" href="#sobremi">Sobre Mi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#">Hoobies</a>
+            <a class="nav-link active" href="#aficiones">Aficiones</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="#">Habilidades</a>
@@ -127,15 +127,50 @@
       <h1 class="fw-light">Sobre mi</h1>
       <p class="lead ">Me considero una persona puntual, organizada, autodidacta, creativa, con ansias de aprender y de autosuperación. Con capacidad de adaptabilidad a diversos ambientes con la finalidad de poder trabajar en equipo y dar lo mejor de mí en los proyectos para así poder desarrollarme profesionalmente.</p>
       <p>
-        <a href="#" class="btn">Hobbies</a>
+        <a href="#aficiones" class="btn">Aficiones</a>
         <a href="#" class="btn">Habilidades</a>
       </p>
     </div>
   </div>
 </section>
 
-<!--HOBBIES-->
+<!--Aficiones-->
+<div class="album py-5 bg-light">
+  <div class="container text-center">
+    <h1 class="fw" id="aficiones">Aficiones</h1>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="col">
+        <div class="card">
+          <img src="icons/leer.png" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Leer</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Leer</text></img>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card shadow-sm">
+          <img src="icons/videos.png" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Leer</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Leer</text></img>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card shadow-sm">
+          <img src="icons/dibujar.png" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Leer</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Leer</text></img>
+        </div>
+      </div>
 
+      <div class="col">
+        <div class="card shadow-sm">
+          <img src="icons/foto.png" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Leer</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Leer</text></img>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card shadow-sm">
+          <img src="icons/musica.png" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Leer</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Leer</text></img>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+</section>
 
 
 <!--HABILIDADES-->
