--- a/index.html
+++ b/index.html
@@ -146,23 +146,27 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="icons/videos.png" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Leer</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Leer</text></img>
+          <img src="icons/videos.png" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Edición de Videos</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Edición de Videos</text></img>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="icons/dibujar.png" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Leer</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Leer</text></img>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card shadow-sm">
-          <img src="icons/foto.png" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Leer</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Leer</text></img>
+          <img src="icons/dibujar.png" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Dibujar</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Dibujar</text></img>
         </div>
       </div>
       <div class="col">
+        <div class="card">
+          <img src="icons/foto.png" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Fotografía</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Fotografía</text></img>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="icons/peliculas.png" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Ver Películas</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Ver Películas</text></img>
+        </div>
+      </div>
+      <div class="col">
         <div class="card shadow-sm">
-          <img src="icons/musica.png" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Leer</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Leer</text></img>
+          <img src="icons/musica.png" class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Música</title><rect width="100%" height="100%" fill="#55595c00"/><text x="50%" y="50%" fill="#55595c00" dy=".3em">Música</text></img>
         </div>
       </div>
     </div>
